--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
 module2 solution
 </title>
 
+<link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
+<div class="main_title"> Our Menu <div>
+
 
 </body>
 
