--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
 <head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>
 module2 solution
 </title>
 
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css\style.css">
 
 </head>
 
