--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ module2 solution
 </head>
 
 <body>
-<div class="main_title"> Our Menu <div>
+<div class="main_title"> Our Menu </div>
 
 
 </body>
