--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8">
@@ -6,12 +7,36 @@
 module2 solution
 </title>
 
-<link rel="stylesheet" href="css\style.css">
+<link rel="stylesheet" href="css\styles.css">
 
 </head>
 
 <body>
 <div class="main_title"> Our Menu </div>
+
+
+
+<section class="section_style">
+<div class="section_title" style="background: #00FFFF"> Chicken </div>
+<div class="section_body">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.
+</div>
+</section>
+
+<section class="section_style">
+<div class="section_title" style="background: #FF00FF"> Beef </div>
+<div class="section_body">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.
+</div>
+</section>
+
+<section class="section_style section_style_solo">
+<div class="section_title section_title_solo" style="background: #FFFF00"> Sushi </div>
+<div class="section_body">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.
+</div>
+</section>
+
 
 
 </body>
